@@ -20,6 +20,7 @@
         <mysql.version>5.1.48</mysql.version>
         <okhttp.version>4.3.0</okhttp.version>
         <rxjava.version>2.2.14</rxjava.version>
+        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
     </properties>
 
     <build>
@@ -35,6 +36,15 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 
@@ -81,6 +91,14 @@
             <groupId>com.bettercloud</groupId>
             <artifactId>vault-java-driver</artifactId>
             <version>5.0.0</version>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Guava -->
